--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
         </div>
     </div>
 
-    <section class="bannar-section" style="background-image: url('assets/image/fbg1.png');">
+    <section class="bannar-section" style="background-image: url('assets/image/about_bannar.png');">
         <div class="bannar_inner">
             <div class="container">
                 <h2 class="h2 text-center">
@@ -133,7 +133,7 @@
                             <div class="inner-text">
                                 <div class="">
                                     <div class="picture">
-                                        <img src="assets/image/dector.png" alt="photos">
+                                        <img src="assets/image/tanvir.jpg" alt="photos">
                                     </div>
                                 </div>
                                 <div class="text bg-white">
@@ -162,7 +162,7 @@
                             <div class="inner-text">
                                 <div class="">
                                     <div class="picture">
-                                        <img src="assets/image/dector.png" alt="photos">
+                                        <img src="assets/image/pollabe.png" alt="photos">
                                     </div>
                                 </div>
                                 <div class="text bg-white">
@@ -191,7 +191,7 @@
                             <div class="inner-text">
                                 <div class="">
                                     <div class="picture">
-                                        <img src="assets/image/dector.png" alt="photos">
+                                        <img src="assets/image/moynaf.png" alt="photos">
                                     </div>
                                 </div>
                                 <div class="text bg-white">
@@ -248,7 +248,7 @@
                             <div class="inner-text">
                                 <div class="">
                                     <div class="picture">
-                                        <img src="assets/image/dector.png" alt="photos">
+                                        <img src="assets/image/moyna.jpg" alt="photos">
                                     </div>
                                 </div>
                                 <div class="text bg-white">
@@ -284,7 +284,7 @@
 
     <section class="features_section">
         <div class="container">
-            <div class="title_box">
+            <div class="title_box mb-4">
                 <h2 class="h2 mb-2"><span>FEATURES</span> </h2>
                 <span>SOME OF OUR FEATURES</span>
             </div>
@@ -292,13 +292,97 @@
 
         <div class="container">
             <div class="row">
-                <div class="col-sm-6 col-md-4">
+                <div class="col-sm-6 col-md-4  mb-4">
                     <div class="icon_text d-flex">
                         <div class="icon">
                             <i class="fas fa-chart-pie"></i>
                         </div>
                         <div class="title_para">
-                            <h5 class="h5">
+                            <h5 class="h5 mb-2">
+                                Lorem Test Thi is Title
+                            </h5>
+                            <p class="para">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, voluptate!
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="col-sm-6 col-md-4  mb-4">
+                    <div class="icon_text d-flex">
+                        <div class="icon">
+                            <i class="fas fa-chart-bar"></i>
+                        </div>
+                        <div class="title_para">
+                            <h5 class="h5 mb-2">
+                                Lorem Test Thi is Title
+                            </h5>
+                            <p class="para">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, voluptate!
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="col-sm-6 col-md-4  mb-4">
+                    <div class="icon_text d-flex">
+                        <div class="icon">
+                            <i class="fas fa-syringe"></i>
+                        </div>
+                        <div class="title_para">
+                            <h5 class="h5 mb-2">
+                                Lorem Test Thi is Title
+                            </h5>
+                            <p class="para">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, voluptate!
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-md-4  mb-4">
+                    <div class="icon_text d-flex">
+                        <div class="icon">
+                            <i class="fas fa-vials"></i>
+                        </div>
+                        <div class="title_para">
+                            <h5 class="h5 mb-2">
+                                Lorem Test Thi is Title
+                            </h5>
+                            <p class="para">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, voluptate!
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="col-sm-6 col-md-4  mb-4">
+                    <div class="icon_text d-flex">
+                        <div class="icon">
+                            <i class="fas fa-notes-medical"></i>
+                        </div>
+                        <div class="title_para">
+                            <h5 class="h5 mb-2">
+                                Lorem Test Thi is Title
+                            </h5>
+                            <p class="para">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, voluptate!
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="col-sm-6 col-md-4  mb-4">
+                    <div class="icon_text d-flex">
+                        <div class="icon">
+                            <i class="fas fa-tablets"></i>
+                        </div>
+                        <div class="title_para">
+                            <h5 class="h5 mb-2">
                                 Lorem Test Thi is Title
                             </h5>
                             <p class="para">
@@ -308,6 +392,10 @@
                     </div>
                 </div>
             </div>
+            <div class="container text-center mt-3">
+                <a href="#" class="btn btn-primariey text-center">View More Feauter</a>
+            </div>
+
         </div>
     </section>
 
