--- a/index.html
+++ b/index.html
@@ -30,61 +30,58 @@
 
 
 
-    <div class="navigation-wrap bg-light start-header start-style">
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <nav class="navbar navbar-expand-md navbar-light">
+    <div class="wrapper">
+        <div class="navigation-wrap bg-light start-header start-style">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <nav class="navbar navbar-expand-md navbar-light">
 
-                        <a class="navbar-brand" href="index.html">
-                            <img src="assets/image/logo-dark.png" alt="photos">
-                        </a>
-
-                        <div class="wrapper-toggler">
-                            <a href="#" class="icon">
-                                <i class="fas fa-hand-holding-medical "></i>
+                            <a class="navbar-brand" href="index.html">
+                                <img src="assets/image/logo-dark.png" alt="photos">
                             </a>
 
-                            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-							    <span class="navbar-toggler-icon"></span>
-						    </button>
-                        </div>
+                            <div class="wrapper-toggler">
+                                <a href="#" class="icon">
+                                    <i class="fas fa-hand-holding-medical "></i>
+                                </a>
 
-                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                            <ul class="navbar-nav ml-auto py-4 py-md-0">
-                                <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4 active">
-                                    <a class="nav-link" href="index.html">HOME</a>
+                                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                                    <span class="navbar-toggler-icon"></span>
+                                </button>
+                            </div>
 
-                                </li>
-                                <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
-                                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="service.html" role="button" aria-haspopup="true" aria-expanded="false">SERVICES</a>
-                                    <div class="dropdown-menu">
-                                        <a class="dropdown-item" href="service.html">service 1</a>
-                                        <a class="dropdown-item" href="privatehospital.html">private hospital</a>
-                                        <a class="dropdown-item" href="govthospital.html">govt hospital</a>
-                                        <a class="dropdown-item" href="postdatilpage.html">Another action</a>
-                                    </div>
-                                </li>
-                                <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
-                                    <a class="nav-link" href="about.html">ABOUT</a>
-                                </li>
-                                <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
-                                    <a class="nav-link" href="blog.html">BLOG</a>
-                                </li>
-                                <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
-                                    <a class="nav-link" href="contact.html">CONTACT</a>
-                                </li>
+                            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                                <ul class="navbar-nav ml-auto py-4 py-md-0">
+                                    <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4 active">
+                                        <a class="nav-link" href="index.html">HOME</a>
 
+                                    </li>
+                                    <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
+                                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="service.html" role="button" aria-haspopup="true" aria-expanded="false">SERVICES</a>
+                                        <div class="dropdown-menu">
+                                            <a class="dropdown-item" href="service.html">service 1</a>
+                                            <a class="dropdown-item" href="privatehospital.html">private hospital</a>
+                                            <a class="dropdown-item" href="govthospital.html">govt hospital</a>
+                                            <a class="dropdown-item" href="postdatilpage.html">Another action</a>
+                                        </div>
+                                    </li>
+                                    <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
+                                        <a class="nav-link" href="about.html">ABOUT</a>
+                                    </li>
+                                    <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
+                                        <a class="nav-link" href="blog.html">BLOG</a>
+                                    </li>
+                                    <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
+                                        <a class="nav-link" href="contact.html">CONTACT</a>
+                                    </li>
+                                </ul>
 
-
-                            </ul>
-
-                        </div>
-                        <div>
+                            </div>
                             <a href="#" class="btn btn-primariey">Help Line</a>
-                        </div>
 
-                    </nav>
+                        </nav>
+                    </div>
                 </div>
             </div>
         </div>
