--- a/about.html
+++ b/about.html
@@ -138,7 +138,7 @@
                                 </div>
                                 <div class="text bg-white">
                                     <h5 class="h5"><a href="#">ABUL HASNAT TANVIR</a></h5>
-                                    <a href="#">Data Specialist</a>
+                                    <a href="#">CEO Of Company</a>
 
                                     <ul class="d-flex mt-2">
                                         <li>
@@ -166,8 +166,8 @@
                                     </div>
                                 </div>
                                 <div class="text bg-white">
-                                    <h5 class="h5"><a href="#">ABUL HASNAT TANVIR</a></h5>
-                                    <a href="#">Data Specialist</a>
+                                    <h5 class="h5"><a href="#">PALLOB BISWAS</a></h5>
+                                    <a href="#">Director Manager</a>
 
                                     <ul class="d-flex mt-2">
                                         <li>
@@ -195,8 +195,8 @@
                                     </div>
                                 </div>
                                 <div class="text bg-white">
-                                    <h5 class="h5"><a href="#">Obaidur Islam</a></h5>
-                                    <a href="#">Toto Specialist</a>
+                                    <h5 class="h5"><a href="#">Moyna Khatun</a></h5>
+                                    <a href="#">Content Manager</a>
 
                                     <ul class="d-flex mt-2">
                                         <li>
@@ -220,12 +220,12 @@
                             <div class="inner-text">
                                 <div class="">
                                     <div class="picture">
-                                        <img src="assets/image/dector.png" alt="photos">
+                                        <img src="assets/image/muishu.jpg" alt="photos">
                                     </div>
                                 </div>
                                 <div class="text bg-white">
                                     <h5 class="h5"><a href="#">Arifun Nahar Mishu</a></h5>
-                                    <a href="#">Data Specialist</a>
+                                    <a href="#">Data Researcher</a>
 
                                     <ul class="d-flex mt-2">
                                         <li>
@@ -248,7 +248,7 @@
                             <div class="inner-text">
                                 <div class="">
                                     <div class="picture">
-                                        <img src="assets/image/moyna.jpg" alt="photos">
+                                        <img src="assets/image/obaidur.png" alt="photos">
                                     </div>
                                 </div>
                                 <div class="text bg-white">
