--- a/about.html
+++ b/about.html
@@ -120,7 +120,7 @@
     <section class="quoter teammember bg-thard-color">
         <div class="ibg">
             <div class="container">
-                <div class="title_box">
+                <div class="title_box mb-3">
                     <h2 class="h2 mb-2"><span>Team</span> </h2>
                     <span>MEET OUR TEAM</span>
                 </div>
@@ -252,7 +252,7 @@
                                     </div>
                                 </div>
                                 <div class="text bg-white">
-                                    <h5 class="h5"><a href="#">Moyna Khatun</a></h5>
+                                    <h5 class="h5"><a href="#">Obaidur Islam </a></h5>
                                     <a href="#">Data Specialist</a>
 
                                     <ul class="d-flex mt-2">
