--- a/hospitaldtailpage.html
+++ b/hospitaldtailpage.html
@@ -120,7 +120,7 @@
 
                         <div class="col-md-4 mb-4">
                             <div class="input-wrapper">
-                                <select name="dector" id="dector">
+                                <select name="dector" id="dector select_icon">
                                     <option value="test">Dector</option>
                                     <option value="test">Dector 1</option>
                                     <option value="test">Dector 2</option>
@@ -132,7 +132,7 @@
 
                         <div class="col-md-4 mb-4">
                             <div class="input-wrapper">
-                                <select name="dector" id="dector">
+                                <select name="dector" id="dector select_icon">
                                     <option value="test">Department</option>
                                     <option value="test1">Dector 1</option>
                                     <option value="test2">Dector 2</option>
