--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
                             </p>
                         </div>
                         <div class="two-btn d-flex justify-content-around">
-                            <a href="#" class="btn btn-primariey">Get Blood</a>
+                            <a href="blood.html" class="btn btn-primariey">Get Blood</a>
                             <a href="#" class="btn btn-primariey">Get plasma</a>
                         </div>
                     </div>
