--- a/blood.html
+++ b/blood.html
@@ -23,7 +23,7 @@
 
 
 
-    <div class="wrapper">
+    <div class="wrappers">
         <div class="navigation-wrap bg-light start-header start-style">
             <div class="container">
                 <div class="row">
@@ -68,9 +68,6 @@
                                     <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
                                         <a class="nav-link" href="contact.html">CONTACT</a>
                                     </li>
-
-
-
                                 </ul>
 
                             </div>
