--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 
 
-    <div class="wrapper">
+    <div class="wrappers">
         <div class="navigation-wrap bg-light start-header start-style">
             <div class="container">
                 <div class="row">
