--- a/contact.html
+++ b/contact.html
@@ -113,8 +113,8 @@
                                     <h5 class="h5">
                                         Address
                                     </h5>
-                                    <span class="span">Moonshine St. 14/05 Light City,
-                                   London, United Kingdom</span>
+                                    <span class="span">Noakhali Sudharam. 105/05 Majdi City,
+                                        Noakhali, Bangladesh.</span>
                                 </div>
                             </div>
 
@@ -187,7 +187,7 @@
                         <input class="form_control" type="text" name="email" id="Email" placeholder="Phone *" required>
 
                     </div>
-                    <div class="col-sm-6">
+                    <div class="col-sm-12">
                         <textarea name="massage" id="msg" cols="30" rows="10"></textarea>
 
                     </div>
