--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- main css -->
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
     <link rel="stylesheet" href="assets/css/modal-video.min.css">
+
 
     <title>Home</title>
 </head>
@@ -98,13 +99,13 @@
                 <div class="swiper-slide " style="background-image: url('ass ets/image/banar.jpg'); background-repeat: no-repeat;">
                     <div class="container">
                         <div class="row">
-                            <div class="col-sm-12 col-md-6">
+                            <div class="col-sm-12 col-md-6 ">
                                 <div class="inner-box">
                                     <div class="bannar-text">
-                                        <h1 class="h1">
+                                        <h1 class="h1 animate__fadeInLeft animate__animated ">
                                             CORONA VIRUS <span>COVID-19</span>
                                         </h1>
-                                        <p class="para">
+                                        <p class="para animate__fadeInUp animate__animated ">
                                             The Coronavirus (COVID-19) was first reported in Wuhan, Hubei, China in December 2019, the outbreak was later recognized as a pandemic by the World Health Organization (WHO) on 11 March 2020.
                                         </p>
                                         <div class="primary-btn">
@@ -125,16 +126,19 @@
                     </div>
                 </div>
 
+
+
+
                 <div class="swiper-slide " style="background-image: url('ass ets/image/banar.jpg'); background-repeat: no-repeat;">
                     <div class="container">
                         <div class="row">
                             <div class="col-sm-12 col-md-6">
                                 <div class="inner-box">
                                     <div class="bannar-text">
-                                        <h1 class="h1">
+                                        <h1 class="h1 animate__fadeInLeft animate__animated ">
                                             BANGLADESH <span>COVID-19 HOSPITAL</span>
                                         </h1>
-                                        <p class="para">
+                                        <p class="para animate__fadeInUp animate__animated ">
                                             Covid-19 Corona viruses(CoV)are a large family of viruses that cause illness raning from the common cold to more severe diseases such as moddile east reapiratory syndroma (MERS CoV) and severe acute respiratory(SARA-CoV).A novl coronavirus (nCoV)is a
                                             new strin that has not been previously identified in humans.
 
@@ -157,16 +161,19 @@
                     </div>
                 </div>
 
+
+
+
                 <div class="swiper-slide " style="background-image: url('ass ets/image/banar.jpg'); background-repeat: no-repeat;">
                     <div class="container">
                         <div class="row">
                             <div class="col-sm-12 col-md-6">
                                 <div class="inner-box">
                                     <div class="bannar-text">
-                                        <h1 class="h1">
+                                        <h1 class="h1 animate__fadeInLeft animate__animated">
                                             GET ALL COVID-19 <span>EMARGENCY SERVICE</span>
                                         </h1>
-                                        <p class="para">
+                                        <p class="para animate__fadeInUp animate__animated">
                                             The Coronavirus (COVID-19) was first reported in Wuhan, Hubei, China in December 2019, the outbreak was later recognized as a pandemic by the World Health Organization (WHO) on 11 March 2020.
                                         </p>
                                         <div class="primary-btn">
@@ -188,6 +195,8 @@
                 </div>
 
             </div>
+
+
     </section>
 
 
@@ -195,13 +204,13 @@
     <section class="service-part bg-primry">
         <div class="container">
             <div class="title_box">
-                <h2 class="h2"><span>Covid Hospitals</span> & Health Centres</h2>
+                <h2 class="h2 animate__fadeInUp animate__animated animate__slower wow"><span>Covid Hospitals</span> & Health Centres</h2>
             </div>
         </div>
         <div class="container">
             <div class="row ">
                 <div class="col-sm-6 col-md-6 col-lg-6 gutter-y">
-                    <div class="inner-box pad-r">
+                    <div class="inner-box pad-r animate__fadeInLeft animate__animated animate__slower wow">
                         <div class="img-camber">
                             <img src="assets/image/private.jpg" alt="">
 
@@ -216,9 +225,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-6 col-md-6 col-lg-6 gutter-y">
+                <div class="col-sm-6 col-md-6 col-lg-6 gutter-y animate__fadeInRight animate__animated animate__slower wow">
                     <div class="inner-box pad-l">
-                        <div class="img-camber">
+                        <div class="img-camber ">
                             <img src="assets/image/public.jpg" alt="">
 
                         </div>
@@ -254,7 +263,7 @@
                         <div class="recovery text-center">
                             <h4 class="h4">RECOVERED</h4>
                             <span class="icon">
-                                <i class="fas fa-shield-virus "></i>
+                                <i class="fas fa-shield-virus animate__heartBeat animate__animated animate__slower animate__infinite wow"></i>
 
                             </span>
                             <span class="count">14711</span>
@@ -286,7 +295,7 @@
 
         <div class="container">
             <div class="row">
-                <div class="col-sm-6 col-md-4 mb-4 mb-md-0">
+                <div class="col-sm-6 col-md-4 mb-4 mb-md-0 animate__fadeInLeft animate__animated animate__slower wow">
                     <div class="inner-box">
                         <div class="img-camber ">
                             <div class="circul-img">
@@ -302,7 +311,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-6 col-md-4 mb-4 mb-md-0">
+                <div class="col-sm-6 col-md-4 mb-4 mb-md-0 animate__fadeInUp animate__animated animate__slower wow">
                     <div class="inner-box">
                         <div class="img-camber  ">
                             <div class="circul-img">
@@ -318,7 +327,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-6 col-md-4 mb-4 mb-md-0">
+                <div class="col-sm-6 col-md-4 mb-4 mb-md-0 animate__fadeInRight animate__animated animate__slower wow">
                     <div class="inner-box">
                         <div class="img-camber ">
                             <div class="circul-img">
@@ -347,7 +356,7 @@
         </div>
         <div class="container">
             <div class="row">
-                <div class="col-sm-6 mb-5 mb-sm-0">
+                <div class="col-sm-6 mb-5 mb-sm-0 animate__fadeInLeft animate__animated animate__slower wow">
                     <div class="oxygen-cember text-center">
 
                         <div class="imgage">
@@ -545,7 +554,7 @@
                     </div>
                 </div>
 
-                <div class="col-sm-6">
+                <div class="col-sm-6 animate__fadeInRight animate__animated animate__slower wow">
                     <div class="blood-camber text-center">
                         <div class="imge">
                             <img src="assets/image/blood.jpg" alt="">
@@ -746,6 +755,7 @@
     <script src="assets/js/jquery-modal-video.min.js"></script>
     <script src="assets/js/hambegur.js"></script>
     <script src="assets/js/counter.js"></script>
+    <script src="assets/js/wow.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
 
