--- a/contact.html
+++ b/contact.html
@@ -208,7 +208,8 @@
                 <div class="row">
                     <div class="col-sm-6 gutter-25 col-lg-4">
                         <div class="para-cover">
-                            <p class="para">We are a big business agency engaged in the internet that will help you to grow your business.</p>
+                            <p class="para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum alias debitis, quibusdam minus, autem modi exercitationem optio nobis reprehenderit, aspernatur facere illo! Omnis quas iusto veritatis praesentium eligendi, repudiandae
+                                exercitationem!</p>
                         </div>
                     </div>
                     <div class="col-sm-6 gutter-25 col-lg-2 d-flex justify-md-content-center">
