--- a/govthospital.html
+++ b/govthospital.html
@@ -102,16 +102,19 @@
                 <div class="col-sm-6  col-md-4 col-lg-3 mb-4">
                     <div class="inner_box">
                         <div class="company_logo">
-                            <a href="#" class="click_go">
-                                <img src="assets/image/govthospitallogo.png" alt="photos">
+                            <a href="hospitaldtailpage.html" class="click_go">
+                                <img src="assets/image/th.jpg" alt="photos">
                             </a>
                         </div>
                         <div class="text-info text-center">
-                            <h4>Hasnattanvir Hospital</h4>
+                            <h4>Mugda Medical College</h4>
                             <span><a href="#" class="btn btn-primariey"># 123 bed covid</a></span>
                             <span><a href="#" class="btn btn-primariey"># 230 icu bed</a> </span>
                             <span><a href="#" class="btn btn-primariey"># free 230 bed</a></span>
                             <span><a href="#" class="btn btn-primariey"># 5 dector icu bed</a></span>
+                            <span class="address_text">Address:Mugda, Dhaka-1214, Bangladesh. Phone: 01553-306518</span>
+
+
                         </div>
                     </div>
                 </div>
@@ -121,16 +124,17 @@
                 <div class="col-sm-6  col-md-4 col-lg-3 mb-4">
                     <div class="inner_box">
                         <div class="company_logo">
-                            <a href="#" class="click_go">
+                            <a href="hospitaldtailpage.html" class="click_go">
                                 <img src="assets/image/img1.png" alt="photos">
                             </a>
                         </div>
                         <div class="text-info text-center">
-                            <h4>Hasnattanvir Hospital</h4>
+                            <h4>Kurmitola General Hospital</h4>
                             <span><a href="#" class="btn btn-primariey"># 123 bed covid</a></span>
                             <span><a href="#" class="btn btn-primariey"># 230 icu bed</a> </span>
                             <span><a href="#" class="btn btn-primariey"># free 230 bed</a></span>
                             <span><a href="#" class="btn btn-primariey"># 5 dector icu bed</a></span>
+                            <span class="address_text">Address: New Airport Road, Kurmitola, Dhaka Cantonment, Dhaka-1206. Phone:02-55062388,02 55062350 , 55062201, 55062349</span>
                         </div>
                     </div>
                 </div>
@@ -139,16 +143,17 @@
                 <div class="col-sm-6  col-md-4 col-lg-3 mb-4">
                     <div class="inner_box">
                         <div class="company_logo">
-                            <a href="#" class="click_go">
+                            <a href="hospitaldtailpage.html" class="click_go">
                                 <img src="assets/image/img1.png" alt="photos">
                             </a>
                         </div>
                         <div class="text-info text-center">
-                            <h4>Hasnattanvir Hospital</h4>
+                            <h4>Shaheed Suhrawardy Medical College</h4>
                             <span><a href="#" class="btn btn-primariey"># 123 bed covid</a></span>
                             <span><a href="#" class="btn btn-primariey"># 230 icu bed</a> </span>
                             <span><a href="#" class="btn btn-primariey"># free 230 bed</a></span>
                             <span><a href="#" class="btn btn-primariey"># 5 dector icu bed</a></span>
+                            <span class="address_text">Address: Sher-e-Bangla Nagar, Dhaka-1207. Phone:02-8144048</span>
                         </div>
                     </div>
                 </div>
@@ -158,16 +163,17 @@
                 <div class="col-sm-6  col-md-4 col-lg-3 mb-4">
                     <div class="inner_box">
                         <div class="company_logo">
-                            <a href="#" class="click_go">
+                            <a href="hospitaldtailpage.html" class="click_go">
                                 <img src="assets/image/img1.png" alt="photos">
                             </a>
                         </div>
                         <div class="text-info text-center">
-                            <h4>Hasnattanvir Hospital</h4>
+                            <h4>Chittagong Medical College</h4>
                             <span><a href="#" class="btn btn-primariey"># 123 bed covid</a></span>
                             <span><a href="#" class="btn btn-primariey"># 230 icu bed</a> </span>
                             <span><a href="#" class="btn btn-primariey"># free 230 bed</a></span>
                             <span><a href="#" class="btn btn-primariey"># 5 dector icu bed</a></span>
+                            <span class="address_text">Address: 57 K.B. Fazlul Kader Rd, Chattogram 4203. Phone: 031-630335</span>
                         </div>
                     </div>
                 </div>
@@ -175,16 +181,17 @@
                 <div class="col-sm-6  col-md-4 col-lg-3 mb-4">
                     <div class="inner_box">
                         <div class="company_logo">
-                            <a href="#" class="click_go">
+                            <a href="hospitaldtailpage.html" class="click_go">
                                 <img src="assets/image/img1.png" alt="photos">
                             </a>
                         </div>
                         <div class="text-info text-center">
-                            <h4>Hasnattanvir Hospital</h4>
+                            <h4>Comilla Medical College</h4>
                             <span><a href="#" class="btn btn-primariey"># 123 bed covid</a></span>
                             <span><a href="#" class="btn btn-primariey"># 230 icu bed</a> </span>
                             <span><a href="#" class="btn btn-primariey"># free 230 bed</a></span>
                             <span><a href="#" class="btn btn-primariey"># 5 dector icu bed</a></span>
+                            <span class="address_text">Address: Kuchaitoli, Dr Akhtar Hameed Khan Rd, Cumilla 3500. Phone: 0816-5562</span>
                         </div>
                     </div>
                 </div>
@@ -193,16 +200,17 @@
                 <div class="col-sm-6  col-md-4 col-lg-3 mb-4">
                     <div class="inner_box">
                         <div class="company_logo">
-                            <a href="#" class="click_go">
+                            <a href="hospitaldtailpage.html" class="click_go">
                                 <img src="assets/image/img1.png" alt="photos">
                             </a>
                         </div>
                         <div class="text-info text-center">
-                            <h4>Hasnattanvir Hospital</h4>
+                            <h4>Cox's Bazar </h4>
                             <span><a href="#" class="btn btn-primariey"># 123 bed covid</a></span>
                             <span><a href="#" class="btn btn-primariey"># 230 icu bed</a> </span>
                             <span><a href="#" class="btn btn-primariey"># free 230 bed</a></span>
                             <span><a href="#" class="btn btn-primariey"># 5 dector icu bed</a></span>
+                            <span class="address_text">Address: Cox's Bazar 4700. Phone: 01821-431144</span>
                         </div>
                     </div>
                 </div>
@@ -210,16 +218,17 @@
                 <div class="col-sm-6  col-md-4 col-lg-3 mb-4">
                     <div class="inner_box">
                         <div class="company_logo">
-                            <a href="#" class="click_go">
+                            <a href="hospitaldtailpage.html" class="click_go">
                                 <img src="assets/image/img1.png" alt="photos">
                             </a>
                         </div>
                         <div class="text-info text-center">
-                            <h4>Hasnattanvir Hospital</h4>
+                            <h4>Rajshahi Medical College Hospital</h4>
                             <span><a href="#" class="btn btn-primariey"># 123 bed covid</a></span>
                             <span><a href="#" class="btn btn-primariey"># 230 icu bed</a> </span>
                             <span><a href="#" class="btn btn-primariey"># free 230 bed</a></span>
                             <span><a href="#" class="btn btn-primariey"># 5 dector icu bed</a></span>
+                            <span class="address_text">Address: Medical College Road, Rajshahi. Phone: 0721-772150</span>
                         </div>
                     </div>
                 </div>
@@ -227,16 +236,17 @@
                 <div class="col-sm-6  col-md-4 col-lg-3 mb-4">
                     <div class="inner_box">
                         <div class="company_logo">
-                            <a href="#" class="click_go">
+                            <a href="hospitaldtailpage.html" class="click_go">
                                 <img src="assets/image/img1.png" alt="photos">
                             </a>
                         </div>
                         <div class="text-info text-center">
-                            <h4>Hasnattanvir Hospital</h4>
+                            <h4>Kushtia Medical College</h4>
                             <span><a href="#" class="btn btn-primariey"># 123 bed covid</a></span>
                             <span><a href="#" class="btn btn-primariey"># 230 icu bed</a> </span>
                             <span><a href="#" class="btn btn-primariey"># free 230 bed</a></span>
                             <span><a href="#" class="btn btn-primariey"># 5 dector icu bed</a></span>
+                            <span class="address_text">Address: Kushtia. Phone:01755-201950</span>
                         </div>
                     </div>
                 </div>
