--- a/privatehospital.html
+++ b/privatehospital.html
@@ -103,11 +103,14 @@
                             </a>
                         </div>
                         <div class="text-info text-center">
-                            <h4>Hasnattanvir Hospital</h4>
+                            <h4>Evercare Hospital</h4>
                             <span><a href="#" class="btn btn-primariey"># 123 bed covid</a></span>
                             <span><a href="#" class="btn btn-primariey"># 230 icu bed</a> </span>
                             <span><a href="#" class="btn btn-primariey"># free 230 bed</a></span>
                             <span><a href="#" class="btn btn-primariey"># 5 dector icu bed</a></span>
+                            <span class="address_text">Address: Bashundhara,Dhaka. Phone: 09666-710678</span>
+
+
                         </div>
                     </div>
                 </div>
@@ -122,11 +125,12 @@
                             </a>
                         </div>
                         <div class="text-info text-center">
-                            <h4>Hasnattanvir Hospital</h4>
+                            <h4>TMSS Medical College & Rafatullah Community</h4>
                             <span><a href="#" class="btn btn-primariey"># 123 bed covid</a></span>
                             <span><a href="#" class="btn btn-primariey"># 230 icu bed</a> </span>
                             <span><a href="#" class="btn btn-primariey"># free 230 bed</a></span>
                             <span><a href="#" class="btn btn-primariey"># 5 dector icu bed</a></span>
+                            <span class="address_text">Address: Rangpur Rd, Bogura. Phone:01733-382345</span>
                         </div>
                     </div>
                 </div>
@@ -140,11 +144,12 @@
                             </a>
                         </div>
                         <div class="text-info text-center">
-                            <h4>Hasnattanvir Hospital</h4>
+                            <h4>I S Brahmanbaria Medical College Hospital</h4>
                             <span><a href="#" class="btn btn-primariey"># 123 bed covid</a></span>
                             <span><a href="#" class="btn btn-primariey"># 230 icu bed</a> </span>
                             <span><a href="#" class="btn btn-primariey"># free 230 bed</a></span>
                             <span><a href="#" class="btn btn-primariey"># 5 dector icu bed</a></span>
+                            <span class="address_text">Address: Ghatura, Brahmanbaria. Phone:01733-382345</span>
                         </div>
                     </div>
                 </div>
@@ -159,11 +164,12 @@
                             </a>
                         </div>
                         <div class="text-info text-center">
-                            <h4>Hasnattanvir Hospital</h4>
+                            <h4>Imperial Hospital Limited</h4>
                             <span><a href="#" class="btn btn-primariey"># 123 bed covid</a></span>
                             <span><a href="#" class="btn btn-primariey"># 230 icu bed</a> </span>
                             <span><a href="#" class="btn btn-primariey"># free 230 bed</a></span>
                             <span><a href="#" class="btn btn-primariey"># 5 dector icu bed</a></span>
+                            <span class="address_text">Address: Zakir Hossain Rd, Chattogram. Phone:09612-247247</span>
                         </div>
                     </div>
                 </div>
@@ -176,11 +182,12 @@
                             </a>
                         </div>
                         <div class="text-info text-center">
-                            <h4>Hasnattanvir Hospital</h4>
+                            <h4>International Medical College Hospital</h4>
                             <span><a href="#" class="btn btn-primariey"># 123 bed covid</a></span>
                             <span><a href="#" class="btn btn-primariey"># 230 icu bed</a> </span>
                             <span><a href="#" class="btn btn-primariey"># free 230 bed</a></span>
                             <span><a href="#" class="btn btn-primariey"># 5 dector icu bed</a></span>
+                            <span class="address_text">Address: Tongi, Gazipur. Phone:01313-498583</span>
                         </div>
                     </div>
                 </div>
@@ -194,11 +201,12 @@
                             </a>
                         </div>
                         <div class="text-info text-center">
-                            <h4>Hasnattanvir Hospital</h4>
+                            <h4>Square Hospital</h4>
                             <span><a href="#" class="btn btn-primariey"># 123 bed covid</a></span>
                             <span><a href="#" class="btn btn-primariey"># 230 icu bed</a> </span>
                             <span><a href="#" class="btn btn-primariey"># free 230 bed</a></span>
                             <span><a href="#" class="btn btn-primariey"># 5 dector icu bed</a></span>
+                            <span class="address_text">Address: Panthapath, Dhaka. Phone:01713141447</span>
                         </div>
                     </div>
                 </div>
@@ -211,11 +219,12 @@
                             </a>
                         </div>
                         <div class="text-info text-center">
-                            <h4>Hasnattanvir Hospital</h4>
+                            <h4>Anwar Khan Modern Medical College Hospital</h4>
                             <span><a href="#" class="btn btn-primariey"># 123 bed covid</a></span>
                             <span><a href="#" class="btn btn-primariey"># 230 icu bed</a> </span>
                             <span><a href="#" class="btn btn-primariey"># free 230 bed</a></span>
                             <span><a href="#" class="btn btn-primariey"># 5 dector icu bed</a></span>
+                            <span class="address_text">Address: Dhanmondi, Dhaka. Phone:02-9670295</span>
                         </div>
                     </div>
                 </div>
@@ -228,11 +237,12 @@
                             </a>
                         </div>
                         <div class="text-info text-center">
-                            <h4>Hasnattanvir Hospital</h4>
+                            <h4>United Hospital Limited</h4>
                             <span><a href="#" class="btn btn-primariey"># 123 bed covid</a></span>
                             <span><a href="#" class="btn btn-primariey"># 230 icu bed</a> </span>
                             <span><a href="#" class="btn btn-primariey"># free 230 bed</a></span>
                             <span><a href="#" class="btn btn-primariey"># 5 dector icu bed</a></span>
+                            <span class="address_text">Address: Gulshan, Dhaka. Phone:09666-710666</span>
                         </div>
                     </div>
                 </div>
@@ -256,7 +266,7 @@
                 <div class="row">
                     <div class="col-sm-6 gutter-25 col-lg-4">
                         <div class="para-cover">
-                            <p class="para">We are a big business agency engaged in the internet that will help you to grow your business.</p>
+                            <p class="para">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt praesentium beatae obcaecati fugit cupiditate amet et aperiam ab, fuga mollitia porro, earum reiciendis. Quis quo neque modi cumque labore alias!</p>
                         </div>
                     </div>
                     <div class="col-sm-6 gutter-25 col-lg-2 d-flex justify-md-content-center">
