--- a/index.html
+++ b/index.html
@@ -248,15 +248,21 @@
     <!-- counter section -->
     <section class="counter-info" style="background-image: url('assets/image/covidbackground.jfif'); ">
         <div class="main_div">
+
+
             <div class="container">
                 <div class="row">
                     <div class="col-sm-4 d-flex justify-content-center counter-guttyr">
                         <div class="total text-center">
-                            <h4 class="h4">BANGLADESH CASES</h4>
+                            <h4 class="h4">BANGLADESH CASES
+                                <span>
+                                    <img src="" id="flag" alt="photos" style="width: 30px; height: 20px;">
+                                </span>
+                            </h4>
                             <span class="icon">
                                 <i class="fas fa-spinner fa-pulse"></i>
                             </span>
-                            <span class="count">900010</span>
+                            <span id="cases"></span>
                         </div>
                     </div>
                     <div class="col-sm-4  d-flex justify-content-center counter-guttyr">
@@ -266,7 +272,7 @@
                                 <i class="fas fa-shield-virus animate__heartBeat animate__animated animate__slower animate__infinite wow"></i>
 
                             </span>
-                            <span class="count">14711</span>
+                            <span id="recovery"></span>
                         </div>
                     </div>
                     <div class="col-sm-4  d-flex justify-content-center counter-guttyr">
@@ -276,10 +282,49 @@
                                 <i class="fas fa-snowflake fa-pulse"></i>
 
                             </span>
-                            <span class="count">10815</span>
+                            <span id="deaths"></span>
                         </div>
                     </div>
+                    <div class="col-sm-4  d-flex justify-content-center counter-guttyr">
+                        <div class="death text-center">
+                            <h4 class="h4">CRITICAL</h4>
+                            <span class="icon">
+                                <i class="fas fa-snowflake fa-pulse"></i>
+
+                            </span>
+                            <span id="critical"></span>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-4  d-flex justify-content-center counter-guttyr">
+                        <div class="death text-center">
+                            <h4 class="h4">TEST</h4>
+                            <span class="icon">
+                                <i class="fas fa-snowflake fa-pulse"></i>
+                                
+                            </span>
+                            <span id="tests"></span>
+                        </div>
+                    </div>
+
+
+
+                    <div class="col-sm-4  d-flex justify-content-center counter-guttyr">
+                        <div class="death text-center">
+                            <h4 class="h4">Active</h4>
+                            <span class="icon">
+                                <i class="fas fa-snowflake fa-pulse"></i>
+
+                            </span>
+                            <span id="active"></span>
+                        </div>
+                    </div>
+
+
+
                 </div>
+
+
             </div>
         </div>
 
@@ -742,13 +787,29 @@
         </div>
     </footer>
 
+
+
+
+
+    <div class="container">
+        <!-- Messenger Chat Plugin Code -->
+        <div id="fb-root"></div>
+
+        <!-- Your Chat Plugin code -->
+        <div id="fb-customer-chat" class="fb-customerchat">
+        </div>
     </div>
+
+
+
 
 
 
     <!-- <script id="gs-sdk" src='//www.buildquickbots.com/botwidget/v3/demo/static/js/sdk.js?v=3' key="2bxx79xx-0dxb-4xx4-ac71-x4a42xxxxxxx"></script> -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+
     <script src="assets/js/swiper-bundle.min.js"></script>
     <script src="assets/js/main.js"></script>
     <script src="assets/js/modal-video.min.js"></script>
@@ -756,7 +817,9 @@
     <script src="assets/js/hambegur.js"></script>
     <script src="assets/js/counter.js"></script>
     <script src="assets/js/wow.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="assets/js/virusupdate.js"></script>
+
+
 
 
 
@@ -767,6 +830,7 @@
         };
     </script>
     <script type="text/javascript" src="assets/js/nodes.js"></script>
+
     <script type="text/javascript">
         var nodesjs = new NodesJs({
             id: 'nodes',
@@ -785,8 +849,27 @@
         });
     </script>
 
+    <script>
+        var chatbox = document.getElementById('fb-customer-chat');
+        chatbox.setAttribute("page_id", "100436098371498");
+        chatbox.setAttribute("attribution", "biz_inbox");
 
+        window.fbAsyncInit = function() {
+            FB.init({
+                xfbml: true,
+                version: 'v11.0'
+            });
+        };
 
+        (function(d, s, id) {
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) return;
+            js = d.createElement(s);
+            js.id = id;
+            js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js';
+            fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));
+    </script>
 
 
 
